@@ -1,5 +1,7 @@
 === HEAD
 
+* Automatically add NOT NULL to columns when adding primary keys if the database doesn't handle it (jeremyevans)
+
 * Make prepared_statements plugin correctly handle lookup on joined datasets (jeremyevans) (#1244)
 
 * Make Database#tables with :qualify=>true option handle table names with double underscores correctly (jeremyevans) (#1241)
